creating component for operators

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -39,6 +39,10 @@
 
       <a mat-list-item [routerLink]="['/replay-subject']"  (click)="changeTitle('Replay SUBJECT')"> Replay Subject </a>
       <mat-divider [inset]="true"></mat-divider>
+
+      <a mat-list-item [routerLink]="['/operators']"  (click)="changeTitle('Operators')"> Operators </a>
+      <mat-divider [inset]="true"></mat-divider>
+
     </mat-nav-list>
   </mat-sidenav>
   <mat-sidenav-content>
